# pump_pal

./: README.md  setup.md  tasks.md
backend/: README.md  backend.opam  dune-project  pp-backend-env
backend/_build/: .db  .digest-db  log
backend/_build/default/: backend.dune-package  backend.install
backend/_build/default/lib/: backend.cma  backend.cmxa  backend.cmxs
backend/_build/default/lib/.backend.objs/byte/: backend.cmi  backend.cmo  backend.cmt
backend/_build/default/lib/.backend.objs/native/: backend.cmx
backend/_build/default/lib/.merlin-conf/: lib-backend
backend/_build/default/test/.backend.eobjs/byte/: dune__exe__Backend.cmi  dune__exe__Backend.cmti
backend/_build/default/test/.backend.eobjs/native/: dune__exe__Backend.cmx
backend/_build/default/test/.merlin-conf/: exe-backend
backend/_build/install/default/lib/backend/: META  dune-package  opam
backend/db/: docker-compose.yml
backend/lib/: dune  number.ml  string.ml  test.ml
backend/lib/auth/: auth.ml  auth.mli  dune
backend/lib/db/: db.ml  db.mli  dune
backend/lib/storage/: dune  exercises.json  storage.ml  storage.mli
backend/lib/workouts/: dune  workouts.ml  workouts.mli
frontend/: README.md  package-lock.json
pump_pal_backend/: Dockerfile  README.md  dune-project
pump_pal_backend/lib/: dune
pump_pal_backend/test/: dune
pump_pal_frontend/: package-lock.json  package.json
