(lang dune 3.8)

(name backend)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Jerri and Vib")

(maintainers "Jerri and Vib")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name backend)
 (synopsis "A short synopsis")
 (description "An app that keeps track of work out plans")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
